Closed
Bug 750145
Opened 13 years ago
Closed 13 years ago
"Assertion failure: failedURI (We don't have a URI for history APIs.)"
Categories
(Core :: DOM: Navigation, defect)
Tracking
()
RESOLVED
FIXED
mozilla15
People
(Reporter: jruderman, Assigned: torisugari)
References
Details
(Keywords: assertion, regression, testcase)
Attachments
(4 files)
1. Save a copy of the testcase locally.
2. Using a debug build of Firefox, load the testcase from a file: URL.
Assertion failure: failedURI (We don't have a URI for history APIs.), at /Users/jruderman/trees/mozilla-central/docshell/base/nsDocShell.cpp:7531
Probably a regression from bug 673752. Also CCing jlebar, who fixed a few other bugs with "location = '404';" in the testcase recently.
| Reporter | ||
Comment 1•13 years ago
|
||
| Assignee | ||
Comment 2•13 years ago
|
||
I'm about to delete the MOZ_ASSERT, and bug 478927 is just waiting for Testcase's review. I'd like to know what hit the MOZ_ASSERT though.
If I understand correctly, the dynamic child iframe prevents the parent docshell from firing onLocationChange. In my opinion, this should not happen, no matter whtat the parent docshell is loading...
| Assignee | ||
Comment 3•13 years ago
|
||
(In reply to O. Atsushi (Torisugari) from comment #2)
> I'm about to delete the MOZ_ASSERT, and bug 478927 is just waiting for
> Testcase's review. I'd like to know what hit the MOZ_ASSERT though.
>
> If I understand correctly, the dynamic child iframe prevents the parent
> docshell from firing onLocationChange. In my opinion, this should not
> happen, no matter whtat the parent docshell is loading...
Well, no, please forget this comment.
| Assignee | ||
Comment 4•13 years ago
|
||
It seems to me that
> document.createElement("iframe");
will set the iframe docshell's initial load type |LOAD_ERROR_PAGE|. This kind of "Like father, like son" strategy is dangerous. I'm not too sure setting LOAD_CMD_HISTORY/LOAD_CMD_RELOAD is safe, but at least LOAD_ERROR_PAGE is destructive.
| Assignee | ||
Comment 5•13 years ago
|
||
Umm, I have no idea how to write the unit test for this bug. attachment 619468 [details] depends on synchronous fallback of NS_ERROR_NOT_FOUND, but bug 282432's fix will make the testcase invalid.
| Assignee | ||
Updated•13 years ago
|
Attachment #619869 -
Flags: review?(bugs)
Comment 6•13 years ago
|
||
Comment on attachment 619869 [details] [diff] [review]
Fix v1
Hmm, is this really the problem. Or do we end up having
parent docshell being loaded while child docshell hasn't started the load yet.
Could we cancel the load in the child in that case?
| Assignee | ||
Comment 7•13 years ago
|
||
(In reply to Olli Pettay [:smaug] from comment #6)
> Hmm, is this really the problem. Or do we end up having
> parent docshell being loaded while child docshell hasn't started the load
> yet.
Probably both are problems. I think we should cancel such a load, if possible. And <about:neterror> may want to use iframes in the future.
| Assignee | ||
Comment 8•13 years ago
|
||
Comment 9•13 years ago
|
||
Comment on attachment 619869 [details] [diff] [review]
Fix v1
Please file a followup to actually cancel child shell loads when parent is in error
Attachment #619869 -
Flags: review?(bugs) → review+
| Assignee | ||
Comment 10•13 years ago
|
||
Filed: bug 751137
| Assignee | ||
Updated•13 years ago
|
Keywords: checkin-needed
Updated•13 years ago
|
Assignee: nobody → torisugari
Comment 11•13 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/483acaa66ef1
Should this have a test?
Comment 12•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 13•13 years ago
|
||
NS_ERROR_UNKNOWN_PROTOCOL is also synchronous, and I guess nobody will insist that asyncOpen should success, since we can't create nsIChannel object. Besides, this should work (or fail) both on local and on the web.
You need to log in
before you can comment on or make changes to this bug.
Description
•