Bug 750145 - iframe should not inherit LOAD_ERROR_PAGE. r=smaug